# hermes-topic-router

./: .gitignore  LICENSE  README.md  __init__.py  config.example.json  config.py  plugin.yaml  pyproject.toml  router.py
tests/: test_config.py  test_router.py
