[project]
name = "hermes-topic-router"
version = "0.3.0"
description = "Auto-route LLM models per chat topic/thread, one bot, multiple models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "0xNekr" }]
keywords = ["hermes", "hermes-agent", "plugin", "telegram", "model-routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/0xNekr/hermes-topic-router"
Repository = "https://github.com/0xNekr/hermes-topic-router"
Issues = "https://github.com/0xNekr/hermes-topic-router/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
